--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,12 +1,11 @@
-page-login {
-  .logo {
-    margin: 0 auto;
-    display: block;
-  }
-  ion-card {
-    ion-row {
-      padding: 10px;
-      float: right;
-    }
+img {
+  margin: 0 auto;
+  display: block;
+}
+ion-card ion-row {
+  padding: 10px;
+  float: right;
+  div button:nth-of-type(1) {
+    margin-right: 10px;
   }
 }
