--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -10,7 +10,7 @@
     </ion-item>
     <ion-row class='login-form__buttons'>
       <div>
-        <button ion-button (click)='navigateToPage("RegisterPage")' color='secondary'>Register</button>
+        <button ion-button (click)='navigateToRegisterPage()' color='secondary'>Register</button>
         <button ion-button (click)='login()'>Login</button>
       </div>
     </ion-row>
